RESOLVED FIXED272669
WebKit process termination with xpc_connection_kill does not always work
https://bugs.webkit.org/show_bug.cgi?id=272669
Summary WebKit process termination with xpc_connection_kill does not always work
Per Arne Vollan
Reported 2024-04-15 06:07:39 PDT
WebKit process termination with xpc_connection_kill does not always work. We are currently seeing flaky termination behavior on macOS, where the child processes are not always terminated successfully. Additionally, on iOS, the XPC connection has become anonymous due to migration to extensions for WebKit processes, and xpc_connection_kwqill does not support anonymous connections.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-15 06:07:58 PDT
Per Arne Vollan
Comment 2 2024-04-15 06:14:28 PDT
EWS
Comment 3 2024-04-15 13:05:14 PDT
Committed 277509@main (3c2c899f692d): <https://commits.webkit.org/277509@main> Reviewed commits have been landed. Closing PR #27259 and removing active labels.
Ryan Haddad
Comment 4 2024-04-17 09:19:03 PDT
*** Bug 272256 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.