Source/WebKit/Platform/cocoa/XPCUtilities.h
@@ -36,5 +36,6 @@ enum class ReasonCode : uint64_t {
 };
 
 void terminateWithReason(xpc_connection_t, ReasonCode, const char* reason);
+void handleXPCExitMessage(xpc_object_t);
 
 }
